--- a/package.json
+++ b/package.json
@@ -15,23 +15,27 @@
     "prepublishOnly": "yarn clean && yarn build",
     "clean": "rm -rf dist dist.browser",
     "docs": "typedoc --out docs --name alcor --includeDeclarations --excludeExternals src/channel.ts src/client.ts node_modules/@replit/protocol/index.d.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "faris@repl.it",
   "license": "UNLICENSED",
   "devDependencies": {
+    "@types/jest": "^24.0.24",
     "@typescript-eslint/eslint-plugin": "^2.3.0",
     "@typescript-eslint/parser": "^2.3.0",
-    "eslint": "^6.4.0",
+    "eslint": "^6.7.2",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.3.0",
     "eslint-import-resolver-typescript": "^1.1.1",
     "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jest": "^23.1.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.14.3",
+    "jest": "^24.9.0",
     "parcel": "^1.12.4",
     "prettier": "^1.18.2",
+    "ts-jest": "^24.2.0",
     "typedoc": "^0.15.0",
     "typescript": "^3.6.4"
   }
